Atualização: responsividade completa para celulares

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <div class="topo">
     <header class="header">
       <p class="header-logo">Leandro Batista</p>
+      <button class="menu-toggle" aria-label="Abrir menu">☰</button>
+
       <nav class="nav">
         <div class="nav-ul">
           <a href="#início">Início</a>
